Trithum, Custom Barn Kit, Cricoid Scatterer, General bugfix pass
* Added Trithum, an additional moon between Arterr and Trithius in the Tritonis system, by The Orios and Techo.
* New description for Montauk.
* Gerro Rings by Janet.
* New Gerro Science definitions by Janet.
* Tidally lock Arach.
* New maps for Twilight by ElectricPants.
* Wolf Rayet went on a brief bug hunting pass through the system, mostly looking for incorrect PQS materials, bad SOI transitions and PQS/Scaled fades. The majority of them up to the end of the Pyri system have been fixed.
* Cricoid had escaped by attention when making Scatterer configs for the Oynag system.
* Add a Custom Barn Kit config that, when used with that mod, adds 5 levels to the VAB, SPH, Launchpad, Runway, and Tracking Station. Think of it as Tier 1, Tier 1.5, Tier 2, Tier 2.5, and Tier 3, where the half tiers keep the model the same. When you upgrade to Tier 1.5, you're also saving some money by the time you upgrade to Tier 2, so you end up spending the same amount to upgrade from T1 to T2, and T2 to T3, as in the stock game. The base stats of of these buildings have also been improved to make early career significantly easier.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/1-Olu.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/1-Olu.cfg
@@ -119,7 +119,134 @@
             }
             Mods
             {
-                VertexMitchellNetravaliHeightMap
+                LandControl
+				{
+					altitudeBlend = 0
+					altitudeFrequency = 1
+					altitudeOctaves = 1
+					altitudePersistance = 1
+					altitudeSeed = 1
+					createColors = False
+					createScatter = True
+					latitudeBlend = 0
+					latitudeFrequency = 1
+					latitudeOctaves = 1
+					latitudePersistance = 1
+					latitudeSeed = 1
+					longitudeBlend = 0
+					longitudeFrequency = 1
+					longitudeOctaves = 1
+					longitudePersistance = 1
+					longitudeSeed = 1
+					useHeightMap = False
+					vHeightMax = 10000
+					order = 999999
+					enabled = True
+					name = Scatter
+					Scatters
+					{
+						Value
+						{
+							name = boulder
+							materialType = BumpedDiffuse
+							material = BUILTIN/gilly_scatter
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 0.3
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 3
+							maxScatter = 20
+							maxSpeed = 1000
+							minScale = 0.5
+							recieveShadows = True
+							seed = 231123
+							verticalOffset = 0
+							instancing = False
+							rotation = 0 360
+							useBetterDensity = False
+							spawnChance = 1
+							ignoreDensityGameSetting = False
+							densityVariance = -0.5 0.5
+							delete = False
+							Material
+							{
+								color = 1,1,1,1
+								mainTex = BUILTIN/gillyScatter
+								mainTexScale = 1,1
+								mainTexOffset = 0,0
+								bumpMap = BUILTIN/ikeScatterNRM
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+							}
+						}
+					}
+					LandClasses
+					{
+						Value
+						{
+							alterApparentHeight = 0
+							alterRealHeight = 0
+							color = 0,0,0,0
+							coverageBlend = 0
+							coverageFrequency = 1
+							coverageOctaves = 1
+							coveragePersistance = 1
+							coverageSeed = 1
+							name = Base
+							latDelta = 1
+							latitudeDouble = False
+							lonDelta = 1
+							minimumRealHeight = 0
+							noiseBlend = 0
+							noiseColor = 0,0,0,0
+							noiseFrequency = 1
+							noiseOctaves = 1
+							noisePersistance = 1
+							noiseSeed = 1
+							delete = False
+							altitudeRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							latitudeDoubleRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							latitudeRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							longitudeRange
+							{
+								endEnd = 2
+								endStart = 2
+								startEnd = -1
+								startStart = -1
+							}
+							Scatters
+							{
+								Value
+								{
+									density = 1
+									scatterName = boulder
+									delete = False
+								}
+							}
+						}
+					}
+				}
+				VertexMitchellNetravaliHeightMap
                 {
                     map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/PluginData/Olu_Shape.png
                     name = Olu_Shape
