--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Arach.cfg
@@ -17,9 +17,9 @@
 			radius = 9799
 			geeASL = 0.008
 			rotates = True
-			tidallyLocked = False
+			tidallyLocked = True
 			initialRotation = 0
-			rotationPeriod = 984213
+			inverseRotThresholdAltitude = 29400
 			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/surfacebiome.png
 			isHomeWorld = False
 			timewarpAltitudeLimits = 0 0 0 0 0 0 0 0
