--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Smeezobbler.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Smeezobbler.cfg
@@ -21,7 +21,7 @@
 			sphereOfInfluence = 30313
 			initialRotation = 310
 			tidallyLocked = true
-			
+			inverseRotThresholdAltitude = 149000
 
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
