--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun.cfg
@@ -18,6 +18,7 @@
 			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Radlun_Biomes.png
 			radius = 10631
 			geeASL = 0.011
+			inverseRotThresholdAltitude = 50800
 			ScienceValues
             {
             }
