--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_1_Gerro.cfg
@@ -120,6 +120,21 @@
 			inclination = 1.85
 			period = 2215129.5488043064
 		}
+		Rings
+		{
+			Ring
+			{
+				angle = 0
+				innerRadius = 1618				
+				outerRadius = 2618
+				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Gerro_rings.png
+				color = 1,1,1,1
+				lockRotation = true
+				unlit = False
+				useNewShader = True
+				penumbraMultipler = 10.0
+			}
+		}	
 		ScaledVersion
 		{
 			Material
