--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_i_Montauk.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_i_Montauk.cfg
@@ -16,7 +16,7 @@
 		Properties
 		{
 			displayName = Montauk^N
-			description = The first and largest moon of Sandevistan. -Techo.
+			description = Montauk is the largest satellite of Sandevistan. It has a very similar appearance to its parent planet, at least in terms of color. It was originally thought to be geologically dead, but with the discovery of its quasisubsatellite Tremelo, it is now thought that there could be enough eccentricity in its orbit to keep it internally very toasty indeed! Montauk might resemble Sandevistan more than just superficially!  -Techo.
 			
 			//do not leave this as the placeholder radius
 			radius = 252500
