--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_ii_Tremolo.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_ii_Tremolo.cfg
@@ -16,7 +16,7 @@
 		Properties
 		{
 			displayName = Tremolo^N
-			description = Tremolo is the second moon of Sandevistan. Lightcurve data for this Tremolo, a moon which toes the line between the largest small moons and smallest large moons, suggests a dramatic appearance. Hard edges, noticable elongation, the current model for Tremolo's shape is hardly refined, but is the product of years of hard debate, and even harder number fudging. It may provide an interesting and worthwhile detour on the route to Sandevistan.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color> and Marshall (Myth) 
+			description = Tremolo is the second moon of Sandevistan. Lightcurve data for this object, a moon which toes the line between the largest small moons and smallest large moons, suggests a dramatic appearance. Hard edges, noticable elongation; the current model for Tremolo's shape is hardly refined, but is the product of years of hard debate, and even harder number fudging. It may provide an interesting and worthwhile detour on the route to Sandevistan.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color> and Marshall (Myth) 
 			
 			//do not leave this as the placeholder radius
 			radius = 21250
@@ -26,6 +26,8 @@
 			@mass *= 0.000082
 			tidallyLocked = true
 			initialRotation = 195
+			//sphereOfInfluence = 39785.4315
+			inverseRotThresholdAltitude = 17000
 			biomeMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Gerro_biomes.png
 			Biomes
 			{
