--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/ScienceDefinitions/ScienceDefs.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/ScienceDefinitions/ScienceDefs.cfg
@@ -16,9 +16,10 @@
 {
 	@RESULTS
 	{
-		GerroInSpaceHigh = Gerro's bright enough to leave a glare when you turn toward it.
-		GerroInSpaceLow = You may find yourself close to a rather large planet, wondering how it got so much bigger than Sandevistan despite being the less massive of the two.
+		GerroInSpaceHigh = Gerro's bright enough to leave a glare when you turn toward it, and its rings only help to keep it even brighter. 
+		GerroInSpaceLow = You may find yourself close to a rather large planet, wondering how it got so much bigger than Sandevistan despite only slightly more massive.
 		GerroFlyingHigh = It's a noticeable drag, but it's decent enough for a short braking pass if you're at the right altitude...
+		GerroFlyingHigh = The entry into this reminds you of a sequence from a certain film you can't put your finger on.
 		GerroFlyingLow = You probably aren't coming back from this, but it's a beautiful demise regardless.
 		GerroFlyingLowLifeBand = There's a greenish tint to this that's unmistakable, but you can't always put your finger on it.
 		
@@ -26,7 +27,8 @@
 		SomnaInSpaceHigh = Looking at Gerro and Sandevistan from this moon brings you a feeling you haven't felt that often.
 		SomnaInSpaceLow = Ah! That's what they are. They're rings...
 		SomnaInSpaceLow = You look at this two-toned moon and wonder what brought it all to this state...
-		SomnaSrfLanded = 
+		SomnaSrfLanded = Seeing Gerro above you like this, let alone occasional passes by Sandevistan, is rather intriguing, to say the least.
+		SomnaSrfLandedVolcano = A risky spot for a landing, but it's a beautiful sight for it regardless.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[evaReport]]:FOR[PJ2]
@@ -45,21 +47,44 @@
 		GerroFlyingLowLifeBand = It's overcome by green now... and it's beautiful.
 		GerroSrfLanded = You have managed the impossible, haven't you?
 				
-		SomnaSrfLanded = The samples of this surface seem rather icy, like you're picking it off.
-		SomnaSrfLandedMare = While it's tough, chipping away at this rock reveals something shiny, like obsidian.
+		SomnaSrfLanded = You take a moment to look at the rings above you... Gerro and Sandevistan complementing each other in the sky... it's rather quaint, somehow.
+		SomnaSrfLanded = It's an endless monochromatic expanse, only knowing that on the other side you will find a more monochromatic expanse.
+		SomnaSrfLandedHighlands = It's like you're looking at the snow on mountains back home. But it's everywhere.
+		SomnaSrfLandedHighlands = It's an endless monochromatic expanse, only knowing that on the other side you w
+		SomnaSrfLandedLowlands = It's an endless monochromatic expanse, only knowing that on the other side you will find a more monochromatic expanse.ill find a more monochromatic expanse.
+		SomnaSrfLandedCrater = Whatever impacted here must have packed a good left hook into this little moon. Perhaps it caused some ring debris, or volcano-like features?
+		SomnaSrfLandedMare = Kicking off the micrometeoroidal dust reveals a nearly-shiny surface underneath, like obsidian.
+		SomnaSrfLandedVolcano = And you may find yourself looking at a little jet puff out from that mountain. A once in a lifetime opportunity, like water flowing underground.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[mysteryGoo]]:FOR[PJ2]
 {
 	@RESULTS
 	{
-		GerroInSpaceHigh = The goo jiggles and wobbles as the objects pass around each other.
+		GerroInSpaceHigh = The goo jiggles and wobbles as the craft flies between the binary.
+		GerroInSpaceLow = The goo is appearing to get a bit queasy, but still interested.
+		GerroInSpaceLowEquator = The goo seems to be getting radiation sickness.
+		GerroFlyingHigh = The goo reacts contently.
+		GerroFlyingHighStorms = The goo begins to get water condensation on it.
+		GerroFlyingHighLifeBand = The goo appears to be observing what's beneath it.
+		GerroFlyingLow = The goo is certainly happy to be here, even if it might be sinking.
+		GerroFlyingLowStorms = The goo appears to be expanding as it drinks all the water it's getting.
+		GerroFlyingLowLifeBand = The goo is overjoyed. It's like it's meeting its bretheren on another planet.
+		
+		SomnaInSpaceHigh = The goo seems to be getting brighter on one half.
+		SomnaInSpaceLow = The goo is freezing over. And heating up. At the same time.
+		SomnaSrfLanded = The goo is freezer-burned.
+		SomnaSrfLandedVolcano = The goo is barely surviving.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[mobileMaterialsLab]]:FOR[PJ2]
 {
 	@RESULTS
 	{
+		GerroInSpaceHigh = As predicted, the clouds are primarily water vapor, though something appears to match a thin band in the equator.
+		GerroInSpaceLow = Water vapor, hints of methane bubbling up. Oddly deficient in ammonia. But... why does that equatorial band match the leaf sent aboard? ...Or did it just fry due to radiation poisoning?
+		GerroFlying = The samples get blasted away due to the atmosphere, some of which catching fire, some dissolving, some simply remaining inert and getting a bit wet.
+		
 		SomnaSrfLanded = The glittering water ice appears to have the same reflection as Somna's northern hemisphere.
 		SomnaSrfLandedLowlands = The rock appears to be basalt here.
 		SomnaSrfLandedMare = Apparently the rock here is somewhere between basalt and obsidian judging by the reflections.
@@ -71,6 +96,11 @@
 	{
 		GerroFlyingHigh = The temperature appears to be decreasing as you reach further into the atmosphere, as expected for a place like this.
 		GerroFlyingLow = Temperature is slowly increasing, to the point that the clouds seem to be a bit more expansive than originally thought.
+		
+		SomnaInSpaceLow = Passing over the dark areas, it feels warmer than the light areas. Expected for albedo variations, but the value is actually higher than would be thought.
+		SomnaSrfLanded = The whole surface seems to be hotter than expected. Something must be churning inside, and the ice appears to be almost sublimating.
+		SomnaSrfLandedVolcano = There appears to be a bit of heat coming out of here, but it's hard to tell what gases are exactly being removed from here.
+		SomnaSrfLandedMare = The basalt and obsidian appear to be slightly warm to the touch.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[barometerScan]]:FOR[PJ2]
@@ -78,8 +108,10 @@
 	@RESULTS
 	{
 		GerroFlyingHigh = Light pressure, as expected from being high up in the atmosphere.
-		GerroFlyingLow = Not crushing pressure, but certainly far more than would be expected from [homeworld].
+		GerroFlyingLow = Not crushing pressure, but certainly far more than would be expected from, say, Armstrong or Dopale.
+		GerroSrfLanded = The barometer's been crushed... by a giant bug.
 		
+		SomnaSrfLanded = Either this instrument is broken or there's zero air pressure here.
 		SomnaSrfLandedVolcano = A slight bit of activity on here from outgassing.
 	}
 }
@@ -87,31 +119,75 @@
 {
 	@RESULTS
 	{
-		GerroInSpaceHigh = Gerro appears to have a lower surface gravity than Sandevistan, perhaps due to it being both bigger and less massive.
+		GerroInSpaceHigh = Gerro appears to have a lower surface gravity than Sandevistan, perhaps due to its lower density.
+		GerroInSpaceHigh = Gerro seems to have a relatively thin atmosphere, like its core is mostly made up of rock and metal like Sandevistan is.
+		GerroInSpaceLow = Sandevistan might be a better gravity assist target, but Gerro can still pack a punch with a close-enough flyby.
+		GerroInSpaceLow = Passing through the ring plane, a negative graviolo or two comes from the rings, though it's minimal compared to the force of Somna or Sandevistan, let alone the overwhelming gravioli coming from Gerro itself.
+		GerroFlyingHigh = It's a surprise that the atmospheric pressure isn't ruining the gravioli readings.
+		GerroFlyingLow = The gravity seems greater than it should be for a planet of that size, but given that it exists in a tango with something as huge as Sandevistan it makes sense that this could be rather rocky.
+		GerroSrfLanded = If the atmosphere didn't slather the detector with gravioli, the polyp preparing to eat this sure will.
 		
+		SomnaInSpaceHigh = Somna seems to be of the average density for a ball of its size. It seems to be a mixture of ice and rock, though whether it is differentiated remains to be seen.
+		SomnaInSpaceHigh = When passing over the equator, a subtle band of gravioli appears to be detected. Perhaps these could be the beginnings of an equatorial ridge.
+		SomnaInSpaceLow = The detector sees more negative gravioli coming from the darker regions than the brighter icy regions. This appears to suggest a body that's not fully differentiated, as if an icy moon could have molded itself onto Somna like a hood. But that's not really possible, is it?
+		SomnaSrfLanded = Despite its low gravity, somehow it manages to hold onto rings.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[seismicScan]]:FOR[PJ2]
 {
 	@RESULTS
 	{
-		SomnaSrfLanded = Light geologic activity, like there are shockwaves still coming about from a recent impact.
+		GerroSrfLanded = You pass into a black void, then prepare to get eaten by a dancing cow.
+		
+		SomnaSrfLanded = Light geologic activity; the giant crater must have been rather recent.
+		SomnaSrfLandedMare = Combined with temperature readings, the detection of dips in lava suggests that Somna is still a geologically active world.
+		SomnaSrfLandedVolcano = Every so often, the surface shakes. This often is followed by a jet released from the volcano.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[atmosphereAnalysis]]:FOR[PJ2]
 {
 	@RESULTS
 	{
-		GerroFlyingHigh = A smattering of hydrogen and helium, but the spectrum is primarily water vapor.
+		GerroFlyingHigh = A smattering of hydrogen and helium, but the spectrum still shows primarily water vapor.
 		GerroFlyingHighLifeBand = There appear to be traces of sulfur from this distance, but exactly how much still remains to be seen.
+		GerroFlyingLow = Water vapor now dominates the spectrum, although methane and ammonia still prop up from here to there.
+		GerroFlyingLowStorms = Water vapor is basically all that is found here.
+		GerroFlyingLowSpadeStorm = High methane content here, about half and half with water vapor.
+		GerroFlyingLowLifeBand = There seems to be a marked decline in carbon dioxide content around here, and a corresponding increase in atmospheric oxygen.
+		GerroSrfLanded = The atmospheric pressure is so crushing that it's now a lump of metal--no wait, it just got eaten by a jellyfish.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[mag*]]:FOR[PJ2]
 {
 	@RESULTS
 	{
-		GerroInSpaceHigh = Gerro's 
+		GerroInSpaceHigh = Gerro's magnetic pole seems misaligned with its spin by about ten degrees. Potentially insignificant.
+		GerroInSpaceLow = Gerro's magnetic pole seems far more misaligned than expected. Radiation here may be somewhat intense.
+		GerroInSpaceLowEquator = The radiation environment is somewhat intense here. The ring particles must be caked with radioactive dust.
+		GerroFlying = You'd have to be daft to open this in the environment here. It's lucky this hasn't broken off yet.
+		GerroSrfLanded = The instrument may try to glounce off the surhace here, glut a glig glug ate it and garglled the corresklonding communication klotential./n/nThat glitch.
+		
 		SomnaInSpaceHigh = Somna appears to have a slight magnetic field caused by inner turbulence, but there is little otherwise aside from a few strange dips.
-		SomnaInSpaceLow = 
+		SomnaInSpaceLow = Somna's magnetic dips appear to be caused by the rings.
 	}
 }
+
+
+
+
+
+		Rings
+		{
+			Ring
+			{
+				angle = 0
+				innerRadius = 1618				
+				outerRadius = 2618
+				texture = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Gerro_rings.png
+				color = 1,1,1,1
+				lockRotation = true
+				unlit = False
+				useNewShader = True
+				penumbraMultipler = 10.0
+			}
+		}	
