--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
@@ -19,7 +19,7 @@
 			//do not leave this as the placeholder radius
 			radius = 9827  
 			tidallyLocked = true
-			
+			inverseRotThresholdAltitude = 15300
 			// 1/100 earth mass in kilograms
 			mass = 3.52E+17
 			ScienceValues  
