--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1t-Bil.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1t-Bil.cfg
@@ -19,7 +19,7 @@
 			@gravParameter *= 0.00837	//0.68 lunar masses	(0.558 Ios) - 0.154 gees
 			initialRotation = 170
 			tidallyLocked = true
-			
+			inverseRotThresholdAltitude = 192000
 			ScienceValues	//Values are placeholders. Will need to change once homeworld is revealed. Remove this comment when final values are entered.
 			{
 				landedDataValue = 10
