--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_A_Rangon.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_A_Rangon.cfg
@@ -22,6 +22,7 @@
 			timewarpAltitudeLimits = 0 0 0 0 0 0 0 0
 			mass = 8.57E+14
 			tidallyLocked = true
+			inverseRotThresholdAltitude = 6000
 			!Biomes{}
 			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/PluginData/RangonBiomeMap.dds
 			ScienceValues
