--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_i_Jones.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_i_Jones.cfg
@@ -21,6 +21,7 @@
 			timewarpAltitudeLimits = 0 0 0 0 0 0 0 0
 			mass = 3.57E+17
 			tidallyLocked = true
+			inverseRotThresholdAltitude = 10000
 			!Biomes{}
 			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/PluginData/JonesBiomeMap.dds
 			ScienceValues
