--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Scatterer/OynagMessScatterer.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Scatterer/OynagMessScatterer.cfg
@@ -110,6 +110,33 @@
 				}
 			}
 		}
+		Item
+		{
+			celestialBodyName = Cricoid
+			transformName = Cricoid
+			loadDistance = 100000000
+			unloadDistance = 200000000
+			hasOcean = False
+			flatScaledSpaceModel = False
+			usesCloudIntegration = True
+			cloudIntegrationUsesScattererSunColors = False
+			mainSunCelestialBody = Sun
+			sunsUseIntensityCurves = True
+			sunColor = 1.0,1.0,1.0
+			secondarySuns
+			{
+				Item
+				{
+					celestialBodyName = Vespol
+					sunColor = 1,0.978,0.932
+				}
+				Item
+				{
+					celestialBodyName = Pyri
+					sunColor = 0.25,0.175,0.11
+				}
+			}
+		}
 	}
 }
 @Scatterer_atmosphere:FOR[PJ2]
@@ -302,6 +329,54 @@
 				postProcessAlpha = 1
 				postProcessDepth = 0
 				extinctionTint = 0
+			}
+		}
+		
+	}
+	Atmo
+	{
+		name = Cricoid
+		atmosphereStartRadiusScale = 1
+		HR = 7.5
+		HM = 4.5
+		m_betaR = 0.04667,0.08333,0.01333
+		BETA_MSca = 0.004167,0.004167,0.004167
+		m_mieG = 0.55
+		averageGroundReflectance = 0.8
+		multipleScattering = True
+		godrayStrength = 0.8
+		flattenScaledSpaceMesh = 0
+		rimBlend = 25
+		rimpower = 300
+		specR = 0
+		specG = 0
+		specB = 0
+		shininess = 0
+		cloudColorMultiplier = 3
+		cloudScatteringMultiplier = 0.200000003
+		cloudSkyIrradianceMultiplier = 0.100000001
+		volumetricsColorMultiplier = 1
+		EVEIntegration_preserveCloudColors = False
+		adjustScaledTexture = False
+		scaledLandBrightnessAdjust = 1
+		scaledLandContrastAdjust = 1
+		scaledLandSaturationAdjust = 1
+		scaledOceanBrightnessAdjust = 1
+		scaledOceanContrastAdjust = 1
+		scaledOceanSaturationAdjust = 1
+		configPoints
+		{
+			Item
+			{
+				altitude = 0
+				skyExposure = 0.25
+				skyAlpha = 1
+				skyExtinctionTint = 1
+				scatteringExposure = 0.25
+				extinctionThickness = 1
+				postProcessAlpha = 1
+				postProcessDepth = 0
+				extinctionTint = 1
 			}
 		}
 	}
