--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/5_Twilight.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/5_Twilight.cfg
@@ -37,6 +37,12 @@
 				}
 				Biome
 				{
+					name = Hull Breach
+					value = 0
+					color = RGBA(160, 198, 225, 255)
+				}
+				Biome
+				{
 					name = RKU3HJaT1Ws
 					value = 0
 					color = RGBA(221, 230, 233, 255)
