--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
@@ -25,6 +25,7 @@
             isHomeWorld = false
             timewarpAltitudeLimits = 0 0 0 0 0 0 0 0
             sphereOfInfluence = 28000
+			inverseRotThresholdAltitude = 21550
             ScienceValues
             {
                 spaceAltitudeThreshold = 999999
