--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Solin.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Solin.cfg
@@ -18,7 +18,7 @@
 			tidallyLocked = true
 			initialRotation = 325
 			radius = 70000
-
+			inverseRotThresholdAltitude = 240300
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= 0.000996
