--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Marith.cfg
@@ -89,6 +89,163 @@
 		{
 			Mods
 			{
+				LandControl
+				{
+					altitudeBlend = 0
+					altitudeFrequency = 1
+					altitudeOctaves = 1
+					altitudePersistance = 1
+					altitudeSeed = 1
+					createColors = False
+					createScatter = True
+					latitudeBlend = 0
+					latitudeFrequency = 1
+					latitudeOctaves = 1
+					latitudePersistance = 1
+					latitudeSeed = 1
+					longitudeBlend = 0
+					longitudeFrequency = 1
+					longitudeOctaves = 1
+					longitudePersistance = 1
+					longitudeSeed = 1
+					useHeightMap = False
+					vHeightMax = 10000
+					order = 999999
+					enabled = True
+					name = Scatter
+					Scatters
+					{
+						Value
+						{
+							name = Rock00
+							materialType = StandardSpecular
+							material = BUILTIN/terrain_rock00
+							mesh = BUILTIN/boulder
+							castShadows = True
+							densityFactor = 1
+							maxCache = 512
+							maxCacheDelta = 32
+							maxLevelOffset = 0
+							maxScale = 2.5
+							maxScatter = 20
+							maxSpeed = 1000
+							minScale = 0.15
+							recieveShadows = True
+							seed = 231123
+							verticalOffset = 0
+							instancing = False
+							rotation = 0 360
+							useBetterDensity = False
+							spawnChance = 1
+							ignoreDensityGameSetting = False
+							densityVariance = -0.5 0.5
+							delete = False
+							Material
+							{
+								color = 0.519999981,0.513417721,0.490379721,1
+								mainTex = BUILTIN/MunBoulder [Diffuse]
+								mainTexScale = 4,4
+								mainTexOffset = 0,0
+								cutoff = 0.5
+								glossiness = 0.078
+								glossMapScale = 1
+								smoothnessTextureChannel = AlbedoAlpha
+								specColor = 0.117647052,0.117647052,0.117647052,1
+								metallicGlossMapScale = 1,1
+								metallicGlossMapOffset = 0,0
+								specularHighlights = True
+								glossyReflections = True
+								bumpScale = 1
+								bumpMap = BUILTIN/MunBoulder [Normal]
+								bumpMapScale = 1,1
+								bumpMapOffset = 0,0
+								parallax = 0.02
+								parallaxMapScale = 1,1
+								parallaxMapOffset = 0,0
+								occlusionStrength = 1
+								occlusionMapScale = 1,1
+								occlusionMapOffset = 0,0
+								emissionColor = 0,0,0,1
+								emissionMapScale = 4,4
+								emissionMapOffset = 0,0
+								detailMaskScale = 1,1
+								detailMaskOffset = 0,0
+								detailAlbedoMapScale = 1,1
+								detailAlbedoMapOffset = 0,0
+								detailNormalMapScale = 1,1
+								detailNormalMapOffset = 0,0
+								UVSec = Uv0
+								mode = Opaque
+								srcBlend = 1
+								dstBlend = 0
+								ZWrite = 1
+							}
+						}
+					}
+					LandClasses
+					{
+						Value
+						{
+							alterApparentHeight = 0
+							alterRealHeight = 0
+							color = 0,0,0,0
+							coverageBlend = 0
+							coverageFrequency = 1
+							coverageOctaves = 1
+							coveragePersistance = 1
+							coverageSeed = 1
+							name = Base
+							latDelta = 1
+							latitudeDouble = False
+							lonDelta = 1
+							minimumRealHeight = 0
+							noiseBlend = 0
+							noiseColor = 0,0,0,0
+							noiseFrequency = 1
+							noiseOctaves = 1
+							noisePersistance = 1
+							noiseSeed = 1
+							delete = False
+							altitudeRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							latitudeDoubleRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							latitudeRange
+							{
+								endEnd = 1
+								endStart = 1
+								startEnd = 0
+								startStart = 0
+							}
+							longitudeRange
+							{
+								endEnd = 2
+								endStart = 2
+								startEnd = -1
+								startStart = -1
+							}
+							Scatters
+							{
+								Value
+								{
+									density = 1
+									scatterName = Rock00
+									delete = False
+								}
+							}
+						}
+					}
+				}
 				VertexHeightMap
 				{
 					map = PJ2\KopernicusFiles\1_InnerSystem\IlioAB_d\PluginData\pj2moomH.png
