--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/5_Cricoid.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/5_Cricoid.cfg
@@ -478,8 +478,9 @@
 			}
 			Material
 			{
-                		shininess = 0.0
-               			specColor = 0.0, 0.0, 0.0, 1
+				shininess = 0.0
+				specColor = 0.0, 0.0, 0.0, 1
+				color = 1.3,1.3,1.3,1
 				rimPower = 0
 				rimBlend = 0.25
 				rimColorRamp = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Blue.png
