--- a/GameData/PJ2/Parts/AntennaScience.cfg
+++ b/GameData/PJ2/Parts/AntennaScience.cfg
@@ -1,4 +1,4 @@
-@PART[*]:HAS[@MODULE[ModuleDataTransmitter]:HAS[~antennaType[INTERNAL]]]{}
+@PART[*]:HAS[@MODULE[ModuleDataTransmitter]:HAS[~antennaType[INTERNAL]]]
 {
 	MODULE
 	{
