make Eron work somehow
thanks wolf-rayet.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_LaughTrack.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/PJ2_LaughTrack.cfg
@@ -185,7 +185,7 @@
 						minValue = 0
 						maxValue = 0.01
 					}
-                    reached = false
+                    reached = true
                 }
             }
 		}
