--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
@@ -55,6 +55,9 @@
 		}
 		ScaledVersion
 		{
+			type = Atmospheric
+			fadeStart = 22500
+			fadeEnd = 90000
 			Material
 			{
 				shininess = 0
@@ -287,24 +290,10 @@
 		{
 			Mods
 			{
-				VertexHeightNoise
-				{
-					deformity = 675
-					frequency = 4.5
-					octaves = 20
-					persistence = 0.9
-					seed = 93550
-					noiseType = RiggedMultifractal
-					mode = High
-					lacunarity = 2.5
-					order = 6
-					enabled = True
-					name = VertexHeightNoise
-				}
 				VertexHeightMap
 				{
 					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_Height.png
-					offset = -500
+					offset = 0
 					deformity = 9000
 					scaleDeformityByRadius = False
 					order = 1
@@ -392,6 +381,71 @@
 						key = 1 1 6.106985 6.106985
 					}
 				}
+				VertexHeightNoiseRegional
+				{
+					order = 8
+					enabled = True
+					name = MountainNoise
+					multiplierMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_Rifts.png
+					Mod
+					{
+						deformity = 1500
+						frequency = 10
+						octaves = 12
+						persistence = 0.5
+						seed = 22122
+						noiseType = Billow
+						mode = High
+						lacunarity = 2.8
+					}
+				}
+				FlattenOceanRegional
+				{
+					multiplierMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_Ice.png
+					name = Icecaps
+					order = 19999
+					Mod
+					{
+						enabled = true
+						oceanRadius = 1500
+					}
+				}
+				VertexSimplexNoiseColorRegional
+				{
+					multiplierMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_Ice.png
+					splitChannels = False
+					order = 20001
+					enabled = True
+					name = IcePatch
+					Mod
+					{
+						blend = 0.85
+						colorStart = 0.89,0.87,0.86
+						colorEnd = 0.97,0.966,0.965,1
+						frequency = 4
+						octaves = 16
+						persistence = 0.5
+						seed = 65456
+					}
+				}
+				VertexHeightNoiseRegional
+				{
+					order = 3000
+					enabled = True
+					name = MountainNoise
+					multiplierMap = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/PluginData/Sandevistan_SeabedsRegional.png
+					Mod
+					{
+						deformity = 450
+						frequency = 3
+						octaves = 4
+						persistence = 0.5
+						seed = 22122
+						noiseType = Perlin
+						mode = High
+						lacunarity = 2.8
+					}
+				}
 				HeightColorMap
 				{
 					blend = 1
@@ -405,7 +459,7 @@
 							name = Flats
 							color = 0.200000003,0.140000001,0.100000001,1
 							altitudeStart = -1
-							altitudeEnd = 0.15
+							altitudeEnd = 0.07
 							lerpToNext = True
 							delete = False
 						}
@@ -413,8 +467,8 @@
 						{
 							name = LowerGradient
 							color = 0.270000011,0.210000008,0.180000007,1
-							altitudeStart = 0.1
-							altitudeEnd = 0.3
+							altitudeStart = 0.07
+							altitudeEnd = 0.16
 							lerpToNext = True
 							delete = False
 						}
@@ -422,17 +476,17 @@
 						{
 							name = MidGrey
 							color = 0.439999998,0.399999946,0.360000014,1
-							altitudeStart = 0.3
-							altitudeEnd = 0.38
+							altitudeStart = 0.16
+							altitudeEnd = 0.29
 							lerpToNext = True
 							delete = False
 						}
 						Value
 						{
 							name = MidHighGreydient
-							color = 0.610000014,0.500000119,0.449999988,1
-							altitudeStart = 0.38
-							altitudeEnd = 0.5
+							color = 0.610000014,0.570000112,0.50999999,1
+							altitudeStart = 0.29
+							altitudeEnd = 0.42
 							lerpToNext = True
 							delete = False
 						}
@@ -440,8 +494,8 @@
 						{
 							name = HigherGrey
 							color = 0.709999979,0.549999952,0.450000018,1
-							altitudeStart = 0.5
-							altitudeEnd = 0.6
+							altitudeStart = 0.42
+							altitudeEnd = 0.56
 							lerpToNext = True
 							delete = False
 						}
@@ -449,7 +503,7 @@
 						{
 							name = Peaks
 							color = 0.930000007,0.824999988,0.74000001,1
-							altitudeStart = 0.6
+							altitudeStart = 0.56
 							altitudeEnd = 1
 							lerpToNext = False
 							delete = False
